[package]
name = "blog-mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "stream"] }

# HTML parsing
scraper = "0.22"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PostgreSQL async driver
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono"] }

# Git operations
git2 = "0.20"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config / env loading
config = "0.14"
dotenvy = "0.15"

# Scheduling
tokio-cron-scheduler = "0.13"

# Datetime
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# URL manipulation
url = "2"
